Improve. Added client header.

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -7,19 +7,27 @@
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
 file(GLOB_RECURSE sources_Session Session/*.cpp Session/*.h)
+file(GLOB_RECURSE sources_Server Server/*.cpp Server/*.h)
+file(GLOB_RECURSE sources_Protocol Protocol/*.cpp Protocol/*.h)
 file(GLOB sources_localdir *.cpp *.h)
 
 set(server_SRCS
   ${server_SRCS}
   ${sources_Session}
+  ${sources_Server}
+  ${sources_Protocol}
   ${sources_localdir}
 )
 
 include_directories(
   ${CMAKE_BINARY_DIR}
   ${CMAKE_SOURCE_DIR}/src/shared
+  ${CMAKE_SOURCE_DIR}/src/shared/Packets
   ${CMAKE_SOURCE_DIR}/src/shared/Network
   ${CMAKE_CURRENT_SOURCE_DIR}
+  ${CMAKE_CURRENT_SOURCE_DIR}/Protocol
+  ${CMAKE_CURRENT_SOURCE_DIR}/Server
+  ${CMAKE_CURRENT_SOURCE_DIR}/Session
 )
 
 add_executable(server
@@ -33,7 +41,6 @@ endif()
 set_target_properties(server PROPERTIES LINK_FLAGS "${server_LINK_FLAGS}")
 
 target_link_libraries(server
-  #game
   shared
   ${Boost_LIBRARIES}
 )
