--- a/src/shared/CMakeLists.txt
+++ b/src/shared/CMakeLists.txt
@@ -6,19 +6,21 @@
 # WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
-file(GLOB_RECURSE sources_Network Network/*.cpp Network/*.h)
+file(GLOB_RECURSE sources_Packets Packets/*.cpp Packets/*.h)
 
 file(GLOB sources_localdir *.cpp *.h)
 
 set(shared_STAT_SRCS
   ${shared_STAT_SRCS}
-  ${sources_Network}
+  ${sources_Packets}
   ${sources_localdir}
 )
 
 include_directories(
   ${CMAKE_BINARY_DIR}
+  ${CMAKE_BINARY_DIR}/src/server
   ${CMAKE_CURRENT_SOURCE_DIR}
+  ${CMAKE_CURRENT_SOURCE_DIR}/Packets
 )
 
 add_library(shared STATIC
