Implemented mysql sync interface. thx TC.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ include(CheckIncludeFiles)
 include(CheckPlatform)
 
 include(ConfigureBoost)
+find_package(MySQL REQUIRED)
 
 # add core sources
 add_subdirectory(src)
