--- a/src/shared/CMakeLists.txt
+++ b/src/shared/CMakeLists.txt
@@ -8,6 +8,7 @@
 
 file(GLOB_RECURSE sources_Database Database/*.cpp Database/*.h)
 file(GLOB_RECURSE sources_Packets Packets/*.cpp Packets/*.h)
+file(GLOB_RECURSE sources_Network Network/*.cpp Network/*.h)
 
 file(GLOB sources_localdir *.cpp *.h)
 
@@ -15,16 +16,21 @@ set(shared_STAT_SRCS
   ${shared_STAT_SRCS}
   ${sources_Database}
   ${sources_Packets}
+  ${sources_Network}
   ${sources_localdir}
 )
 
 include_directories(
   ${CMAKE_BINARY_DIR}
-  ${CMAKE_BINARY_DIR}/src/server
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_CURRENT_SOURCE_DIR}/Packets
   ${CMAKE_CURRENT_SOURCE_DIR}/Database
+  ${CMAKE_CURRENT_SOURCE_DIR}/Network
+  ${CMAKE_SOURCE_DIR}/src/game
+  ${CMAKE_SOURCE_DIR}/src/game/Protocol
+  ${CMAKE_SOURCE_DIR}/src/game/Session
   ${MYSQL_INCLUDE_DIR}
+  ${BOOST_INCLUDE_DIR}
 )
 
 add_library(shared STATIC
